Updated activation to support multisite. Updated flash messenger to use transients instead of the session. Fixed URL's overflowing in tasks. Fixed deactivate form not showing when URL has parameters. Added full URL to admin menu bar url, for multisite support. Updated estimate hours field to support more than 99 hours.

--- a/css/board.scss
+++ b/css/board.scss
@@ -298,6 +298,10 @@ sub {
 		z-index: 1;
 	}
 
+    [contenteditable] {
+      overflow-x: hidden;
+    }
+
 	[contenteditable="true"] {
 		cursor: pointer;
 		margin: 0 (-$margin/5) 0 (-$margin/5);
